<resources>
    <string name="app_name">Toy Swap</string>
    <string name="continue_without_signing_in">Continue as guest</string>
    <string name="login_with_google">Login with google</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="toyswap">ToySwap</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="street">Street</string>
    <string name="submit">Submit</string>
    <string name="choose_category">Choose category</string>
    <string name="change_category">Change category</string>
    <string name="pick_category">Pick category</string>
    <string name="main_picture">Main picture</string>
    <string name="provideAllData">You must provide all necessary data.</string>
    <string name="make_an_offer">Make an offer</string>
    <string name="items_you_might_find_interesting">Items You might find interesting</string>
    <string name="buy_with_delivery">Buy with delivery</string>
    <string name="delivery_price">Delivery price:</string>
    <string name="user_reputation">User reputation:</string>
    <string name="seller_avatar">seller avatar</string>
    <string name="in_toyswap_since">In Toyswap since</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="add">Add</string>
    <string name="messages">Messages</string>
    <string name="my_items">My Items</string>
    <string name="my_listed_items">My listed items</string>
    <string name="personal_pickup">Personal pickup</string>
    <string name="shipment">Shipment</string>
    <string name="item_added_successfully">Your item was posted successfully!</string>
</resources>